Create Gradle version
Signed-off-by: Max Allan <max.allan@chainguard.dev>